--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,10 @@ body {
     height: 100%;
 }
 
+html {
+   
+}
+
 body {
     -webkit-font-smoothing: antialiased;
     text-rendering: optimizeLegibility;
@@ -40,7 +44,7 @@ img {
 }
 
 #stage {
-    background: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)), url('../img/cherry%20blossoms.jpg') center center no-repeat;
+    background: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url('../img/cherry%20blossoms.jpg') center center no-repeat;
     background-size: cover;
     opacity: 0.8;
     color: white;
@@ -63,3 +67,117 @@ img {
     font-weight: bold;
     text-transform: uppercase;
 }
+
+#stage-caption h6 {
+    color: white;
+}
+
+#stage-caption h6 {
+    margin-top: 1rem;
+}
+
+#stage-caption a {
+    margin-top: 2rem;
+}
+
+
+span {
+    margin: 0 0.5rem 0 0.5rem;
+}
+
+.carousel-item h3 {
+       color: white;
+}
+
+.feature-content {
+    padding: 8rem 0;
+    overflow: hidden;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+}
+
+.back-dark {
+    background: #262F36;
+    color: white;
+}
+
+.back-dark h2, .back-dark h5, .back-dark h6{
+    color: white;
+}
+
+.back-dark .monitor-transparent {
+    filter: invert(90%) brightness(95%) contrast(80%);
+}
+
+.overlap-div {
+    position: relative;
+    top: 0;
+    left: 0;
+}
+
+
+.monitor-transparent {
+    position: relative;
+    top: 0;
+    left: 0;
+}
+
+#flagship-img {
+   position: absolute;
+    top: 2rem;
+    right: 0.1rem;
+    height: 70%;
+    width: 100%;
+}
+
+#budgetapp-img {
+    position: absolute;
+    top: 0.2rem;
+    right: 1.4rem;
+    height: 80%;
+    width: 90%;
+}
+
+#forkify-img {
+    position: absolute;
+    top: 1rem;
+    right: 1.5rem;
+    height: 75%;
+    width: 90%;
+}
+
+#quiz-img {
+    position: absolute;
+    width: 90%;
+    height: 78%;
+    left: 2rem;
+    top: 0.5rem;
+}
+
+#piggame-img {
+    position: absolute;
+    width: 90%;
+    height: 80%;
+    left: 2rem;
+    top: 0.3rem;  
+}
+
+
+
+
+
+@media screen and (max-width: 48rem) {
+    .feature-content {
+        flex-wrap: wrap;
+    }
+    .feature-content .col-lg-5{
+        padding-top: 4rem;
+    }
+    #ph-div {
+    margin-bottom: 0;
+    margin-top: 0;
+    }
+}
+
