--- a/css/style.css
+++ b/css/style.css
@@ -52,6 +52,8 @@ img {
     width: 100%;
     display: flex;
     align-items: center;
+    margin: 0;
+    padding: 0;
 }
 
 #stage-caption {
@@ -152,7 +154,7 @@ span {
     position: absolute;
     width: 90%;
     height: 78%;
-    left: 2rem;
+    left: 1.3rem;
     top: 0.5rem;
 }
 
@@ -160,8 +162,31 @@ span {
     position: absolute;
     width: 90%;
     height: 80%;
-    left: 2rem;
+    left: 1.4rem;
     top: 0.3rem;  
+}
+
+.feature-alt {
+   background: #f0f0f0;
+}
+
+#quote-section .feature-content{
+    padding: 0;
+}
+
+#page-footer {
+    background: #262F36;
+    color: white;
+    padding: 4rem 0;
+    font-size: 0.8rem;
+}
+
+#page-footer li a{
+    color: #6C6F73;
+}
+
+#page-footer h6 {
+    color: #718FA9;
 }
 
 
