--- a/css/style.css
+++ b/css/style.css
@@ -82,6 +82,7 @@ img {
 
 #stage-caption a {
     margin-top: 2rem;
+    margin-left: 0.3rem;
 }
 
 
@@ -206,6 +207,38 @@ span {
     position: absolute;
     width: 90%;
     height: 77%;
+    left: 1.5rem;
+    top: 1.1rem;
+}
+
+#travelsite-img {
+    position: absolute;
+    width: 90%;
+    height: 77%;
+    left: 1.5rem;
+    top: 1.1rem;
+}
+
+#todo-img {
+    position: absolute;
+    width: 90%;
+    height: 77%;
+    left: 1.5rem;
+    top: 1.1rem;
+}
+
+#block-img {
+    position: absolute;
+    width: 90%;
+    height: 73%;
+    left: 1.5rem;
+    top: 1.4rem;
+}
+
+#balloons-img {
+    position: absolute;
+    width: 90%;
+    height: 75%;
     left: 1.5rem;
     top: 1.1rem;
 }
