--- a/css/style.css
+++ b/css/style.css
@@ -34,6 +34,11 @@ img {
     max-width: 100%;
 }
 
+.btn-fcc {
+    background-color: #006400;
+    color: white;
+}
+
 .blockquote {
     font-size: 1.6rem;
     color: #333;
