--- a/css/style.css
+++ b/css/style.css
@@ -280,7 +280,11 @@ span {
     color: #718FA9;
 }
 
-
+#play-store {
+    margin-top: 5px; 
+    background: linear-gradient(to right, rgba(0, 153, 136, 0.8), rgba(34, 119, 153, 0.8));
+    border: none;
+}
 
 
 
