thumbnails for the new three projects

--- a/css/style.css
+++ b/css/style.css
@@ -292,6 +292,30 @@ span {
     top: 1.1rem;
 }
 
+#notify-img {
+    position: absolute;
+    width: 90%;
+    height: 75%;
+    left: 1.9rem;
+    top: 1.1rem;
+}
+
+#meditation-img {
+    position: absolute;
+    width: 88%;
+    height: 74%;
+    left: 2.2rem;
+    top: 1.2rem;
+}
+
+#voice-img {
+    position: absolute;
+    width: 90%;
+    height: 77%;
+    left: 1.5rem;
+    top: 1.1rem;
+}
+
 
 .feature-alt {
     background: #f0f0f0;
